--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,30 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-static-top">
     <div class="navbar-inner">
       <div class="container">
-        <a class="brand" href="/">Rails Store App</a>
+        <div class="nav-collapse"></div>
+          <ul class="nav">
+            <li><a class="brand" href="/">Rails Store App</a></li>
+            <li><a href="/products">Products</a></li>
+            <li><a href="/reviews">Reviews</li></a>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
+  </nav>
   <div class="container">
     <div class="row">
       <%= yield %>
     </div>
   </div>
-  <footer>
-    <div class="container">
+  <footer class="container">
+    <div class="row">
+      <div clas="span12">
+        <hr />
+        Copyright © Rails Store App, 2013
+      </div>
     </div>
   </footer>
 </body>
