--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing products</h1>
+<p id="notice"><%= notice %></p>
+
+<h2>Listing products</h2>
 
 <table>
   <tr>
@@ -12,7 +14,8 @@
 <% @products.each do |product| %>
   <tr>
     <td><%= product.name %></td>
-    <td><%= product.price %></td>
+    <td><%= number_to_currency(product.price) %></td>
+    <td><%= link_to 'Add to Cart', product, method: :post %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
