--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Image:</b>
+  <img src="<%= @product.image_url %>" />
+</p>
+
+<p>
   <b>Name:</b>
   <%= @product.name %>
 </p>
 
 <p>
+  <b>Description:</b>
+  <%= @product.description %>
+</p>
+
+<p>
   <b>Price:</b>
-  <%= @product.price %>
+  <%= number_to_currency(@product.price) %>
 </p>
 
 <p><a href="/reviews/new?id=<%= @product.id %>">Create Review</a></p>
@@ -20,3 +30,5 @@
 <hr />
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+<%= render "cart"%>
