--- a/app/views/products/_cart.html.erb
+++ b/app/views/products/_cart.html.erb
@@ -15,6 +15,11 @@
           <td><%= link_to 'Remove from Cart', product, method: :post %></td>
         </tr>
         <% end %>
+        <tr>
+          <td>Total:</td>
+          <td><%= number_to_currency(@cart_total) %></td>
+          <td></td>
+        </tr>
       </table>
     </div>
   </div>
