--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,6 +28,7 @@
     Reviewed on: <%= review.created_at.strftime("%A, %B %e, %Y") %>
   <% end %>
 <hr />
+<%= link_to 'Add to Cart', @product, method: :post %>
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
 
