--- a/app/views/products/_cart.html.erb
+++ b/app/views/products/_cart.html.erb
@@ -12,7 +12,7 @@
         <tr>
           <td><%= product.name %></td>
           <td><%= number_to_currency(product.price) %></td>
-          <td><%= link_to 'Remove from Cart', product, method: :post %></td>
+          <td><%= link_to 'Remove from Cart', remove_from_cart_product_path(product), method: :post %></td>
         </tr>
         <% end %>
         <tr>
