--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
   <tr>
     <td><%= product.name %></td>
     <td><%= number_to_currency(product.price) %></td>
-    <td><%= link_to 'Add to Cart', product, method: :post %></td>
+    <td><%= link_to 'Add to Cart', add_to_cart_product_path(product), method: :post %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,3 +26,4 @@
 <br />
 
 <%= link_to 'New Product', new_product_path %>
+<%= render "cart"%>
