--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,6 +20,11 @@
   <%= number_to_currency(@product.price) %>
 </p>
 
+<p>
+  <b>Product ID:</b>
+  <%= @product.id %>
+</p>
+
 <p><a href="/reviews/new?id=<%= @product.id %>">Create Review</a></p>
 <h2>User Reviews</h2>
   <% @user_reviews.each do |review| %>
@@ -28,7 +33,7 @@
     Reviewed on: <%= review.created_at.strftime("%A, %B %e, %Y") %>
   <% end %>
 <hr />
-<%= link_to 'Add to Cart', @product, method: :post %>
+<%= link_to 'Add to Cart', add_to_cart_product_path(@product), method: :post %>
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
 
