--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-
       <ul>
       <% @review.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -16,37 +15,15 @@
     <%= f.text_area :body %>
   </div>
   <div class="field">
-    <select name="review[rating]">
-      <option value = "">Select rating</option>
-      <option value = "0">0</option>
-      <option value = "1">1</option>
-      <option value = "2">2</option>
-      <option value = "3">3</option>
-      <option value = "4">4</option>
-      <option value = "5">5</option>
-    </select>
-    <!--
-    <%= f.label :rating %><br />
-    <%= f.text_field :rating %>
-    -->
+    <%= f.select :rating, (0..5) %>
   </div>
-  
-  <% if params[:id].present? %>
-    <input type="hidden" name="review[product_id]" value="<%= @product_id %>" />
-  <% else %>
-    <%= f.label :product_id %><br />
-    <select name="review[product_id]">
-      <% @products.each do |product| %>
-      <option value="<%= product.id %>">
-        <%= product.name %>
-      </option>
-      <% end %>
-    </select>
-  <% end %>
-  <!-- <div class="field">
-    <%= f.label :product_id %><br />
-    <%= f.number_field :product_id %>
-  < /div> -->
+  <div class="field">
+    <% if params[:id].present? %>
+      <%= f.hidden_field :product_id, :value => params[:id] %>
+    <% else %>
+      <%= f.hidden_field :product_id, :value => @review.product_id %>
+    <% end %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
