--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New review for <%= @product_name %></h1>
+<h1>New review for <%= @product.name %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', reviews_path %>
+<%# link_to 'Back', reviews_path %>
+<%= link_to 'Back', products_path %>
