--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -18,5 +18,6 @@
 </p>
 
 
-<%= link_to 'Edit', edit_review_path(@review) %> |
-<%= link_to 'Back', reviews_path %>
+<%# link_to 'Edit', edit_review_path(@review) %> |
+<%= link_to 'Back', products_path %>
+
