Added some styling

--- a/app/views/application/home.erb
+++ b/app/views/application/home.erb
@@ -1,3 +1,12 @@
+<div class="center hero-unit">
+  <h1>Welcome to Rails Shop</h1>
+
+  <h2>This is the home page for the application.</h2>
+
+  <%= link_to "Enter Store", '/products', class: "btn btn-large btn-primary" %>
+</div>
+
+
 <div class="span12 home">
   <div class="span6">
   <a href="/products">Products</a>
