--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Rails Store App</title>
-  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
-  <%= stylesheet_link_tag    "styles", :media => "all" %>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <title>Rails Shop</title>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-static-top">
+  <header class="navbar navbar-inverse navbar-static-top">
     <div class="navbar-inner">
       <div class="container">
-        <div class="nav-collapse"></div>
+        <%= link_to "Rails Shop", root_path, id: "logo" %>
+        <nav>
           <ul class="nav">
-            <li><a class="brand" href="/">Rails Store App</a></li>
-            <li><a href="/products">Products</a></li>
-            <li><a href="/reviews">Reviews</li></a>
+            <li><%= link_to "Products", products_path %></li>
+            <li><%= link_to "Reviews", reviews_path %></li>
           </ul>
-        </div>
+        </nav>
       </div>
     </div>
-  </nav>
+  </header>
   <div class="container">
-    <div class="row">
-      <%= yield %>
-    </div>
+    <%= yield %>
   </div>
-  <footer class="container">
+  <footer class="container center">
     <div class="row">
       <div clas="span12">
-        <hr />
-        Copyright © Rails Store App, 2013
+        &copy; 2013 Rails Shop
       </div>
     </div>
   </footer>
