--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,6 +1,9 @@
+<% title "Review for #{@product.name}" %>
 <p id="notice"><%= notice %></p>
 
-<p><%= @product_name %></p>
+<%#= params.inspect %>
+
+<p><%= @product.name %></p>
 
 <p>
   <b>Text:</b>
