--- a/app/views/products/_cart.html.erb
+++ b/app/views/products/_cart.html.erb
@@ -1,26 +1,24 @@
-<div class="row">
-  <div class="span4">
-    <div class="well">
-      <h4>Your Shopping Cart</h4>
-      <table>
-        <tr>
-          <th>Item</th>
-          <th>Price</th>
-          <th></th>
-        </tr>
-        <% @products_in_cart.each do |product| %>
-        <tr>
-          <td><%= product.name %></td>
-          <td><%= number_to_currency(product.price) %></td>
-          <td><%= link_to 'Remove from Cart', remove_from_cart_product_path(product), method: :post %></td>
-        </tr>
-        <% end %>
-        <tr>
-          <td>Total:</td>
-          <td><%= number_to_currency(@cart_total) %></td>
-          <td></td>
-        </tr>
-      </table>
-    </div>
+<div class="span4">
+  <div class="well">
+    <h4 class="center">Your Shopping Cart</h4>
+    <table>
+      <tr>
+        <th>Item</th>
+        <th>Price</th>
+        <th></th>
+      </tr>
+      <% @products_in_cart.each do |product| %>
+      <tr>
+        <td><%= product.name %></td>
+        <td><%= number_to_currency(product.price) %></td>
+        <td><%= link_to 'Remove', remove_from_cart_product_path(product), method: :post %></td>
+      </tr>
+      <% end %>
+      <tr>
+        <td>Total:</td>
+        <td><%= number_to_currency(@cart_total) %></td>
+        <td></td>
+      </tr>
+    </table>
   </div>
 </div>
