--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -21,6 +21,6 @@
 </p>
 
 
-<%# link_to 'Edit', edit_review_path(@review) %> |
-<%= link_to 'Back', products_path %>
+<%# link_to 'Edit', edit_review_path(@review) %>
+<%= link_to 'Back to Products', products_path %>
 
