--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,13 +1,13 @@
 body {
-  background-color: #fff;
+  background-color: #D2D1D0;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
@@ -25,7 +25,6 @@ a {
   }
   &:hover {
     color: #fff;
-    background-color: #000;
   }
 }
 
