--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,23 +5,24 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header class="navbar navbar-inverse navbar-static-top">
     <div class="navbar-inner">
       <div class="container">
         <%= link_to "The Rails Shop", root_path, id: "logo" %>
-        <nav>
+        <!-- <nav>
           <ul class="nav">
-            <li><%= link_to "Products", products_path %></li>
-            <li><%= link_to "Reviews", reviews_path %></li>
+            <li><%#= link_to "Products", products_path %></li>
+            <li><%#= link_to "Reviews", reviews_path %></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </div>
   </header>
-  <div class="container">
+  <div class="container main">
     <%= yield %>
   </div>
   <footer class="container center">
