--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name, "Name *" %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :price %><br />
+    <%= f.label :price, "Price *" %>
     <%= f.text_field :price %>
   </div>
   <div class="field">
-    <%= f.label :image_url %><br />
+    <%= f.label :image_url %>
     <%= f.text_field :image_url %>
   </div>
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-small" %>
   </div>
 <% end %>
