--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -11,11 +11,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :body %><br />
+    <%#= f.label :body %><br />
     <%= f.text_area :body %>
   </div>
   <div class="field">
-    <%= f.select :rating, (0..5) %>
+    <%= f.label :rating, "Rating (0 - 5)" %>
+    <%= f.text_field :rating %>
   </div>
   <div class="field">
     <% if params[:id].present? %>
@@ -25,6 +26,6 @@
     <% end %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-small" %>
   </div>
 <% end %>
