--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,8 @@
 <% title "New Review for #{@product.name}" %>
 
-<h1>New review for <%= @product.name %></h1>
+<h2 class="center bold">New review for <%= @product_name %></h2>
 
 <%= render 'form' %>
 
 <%# link_to 'Back', reviews_path %>
-<%= link_to 'Back', products_path %>
+<p><%= link_to 'Back to Products', products_path, :class => "btn btn-small" %></p>
