--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,9 @@
             <p><%= link_to "#{product.name}", product %></p>
            <p class="bold"><%= number_to_currency(product.price) %></p>
            <p><%= link_to 'Add to Cart', add_to_cart_product_path(product), method: :post, :class => "btn btn-mini" %></p>
-           <p><%= link_to 'Edit', edit_product_path(product) %> | <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+           <!--
+           <p><%#= link_to 'Edit', edit_product_path(product) %> | <%#= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+            -->
         </div>
       </li>
       <% end %>
